test/type-error-6.err.expect
test/type-error-6.ktn:3:1: error: cannot solve scalar type constraint Int (output of bar) = [t1 (type var a of myAddVector)] (output of myAddVector)
test/type-error-6.ktn:1:17: note: [t1 (type var a of myAddVector)] (output of myAddVector) is from here
test/type-error-6.ktn:3:9: note: Int (output of bar) is from here
